Fix android plugin packagename in AndroidManifest.  Was referencing bgfetch namespace.  This plugin template was originally copied from background-fetch

--- a/example/src/app/home/home.page.html
+++ b/example/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="tertiary">
     <ion-title>
-      BackgroundFetch Demo
+      BGGeo Firebase Demo
     </ion-title>
     <ion-buttons slot="end">
       <ion-toggle [(ngModel)]="state.enabled" (ionChange)="onToggleEnabled()" style="display:block;"></ion-toggle>
